{
  "version": 4,
  "terraform_version": "1.11.2",
  "serial": 35,
  "lineage": "195dc15d-d9af-fb45-08c4-ddd01bf2ac39",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "vm_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/58048bb8-7fbe-431d-b28e-d5bca207fbdf/resourceGroups/EnvironTest/providers/Microsoft.Network/networkInterfaces/nic-vm",
            "internal_domain_name_suffix": "yhlhuxggzl3ufo0nbztepad0dg.ux.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipconfig1",
                "primary": true,
                "private_ip_address": "10.0.1.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/58048bb8-7fbe-431d-b28e-d5bca207fbdf/resourceGroups/EnvironTest/providers/Microsoft.Network/publicIPAddresses/public-ip-vm",
                "subnet_id": "/subscriptions/58048bb8-7fbe-431d-b28e-d5bca207fbdf/resourceGroups/EnvironTest/providers/Microsoft.Network/virtualNetworks/vnet-poc/subnets/subnet-vm"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "canadacentral",
            "name": "nic-vm",
            "private_ip_address": "10.0.1.5",
            "private_ip_addresses": [
              "10.0.1.5"
            ],
            "resource_group_name": "EnvironTest"
          },
          "dependencies": [
            "azurerm_public_ip.vm_ip",
            "azurerm_subnet.vm_subnet",
            "azurerm_virtual_network.Poc_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "vmcompute969_z1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/58048bb8-7fbe-431d-b28e-d5bca207fbdf/resourceGroups/EnvironTest/providers/Microsoft.Network/networkInterfaces/nic-vmcompute",
            "internal_domain_name_suffix": "yhlhuxggzl3ufo0nbztepad0dg.ux.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipconfig1",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/58048bb8-7fbe-431d-b28e-d5bca207fbdf/resourceGroups/EnvironTest/providers/Microsoft.Network/virtualNetworks/vnet-poc/subnets/subnet-vm"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "canadacentral",
            "mac_address": "60-45-BD-5C-45-F0",
            "name": "nic-vmcompute",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "EnvironTest",
            "virtual_machine_id": "/subscriptions/58048bb8-7fbe-431d-b28e-d5bca207fbdf/resourceGroups/EnvironTest/providers/Microsoft.Compute/virtualMachines/VmCompute"
          },
          "dependencies": [
            "azurerm_subnet.vm_subnet",
            "azurerm_virtual_network.Poc_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "vm_nic_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/58048bb8-7fbe-431d-b28e-d5bca207fbdf/resourceGroups/EnvironTest/providers/Microsoft.Network/networkInterfaces/nic-vmcompute|/subscriptions/58048bb8-7fbe-431d-b28e-d5bca207fbdf/resourceGroups/EnvironTest/providers/Microsoft.Network/networkSecurityGroups/vmhead-nsg",
            "network_interface_id": "/subscriptions/58048bb8-7fbe-431d-b28e-d5bca207fbdf/resourceGroups/EnvironTest/providers/Microsoft.Network/networkInterfaces/nic-vmcompute",
            "network_security_group_id": "/subscriptions/58048bb8-7fbe-431d-b28e-d5bca207fbdf/resourceGroups/EnvironTest/providers/Microsoft.Network/networkSecurityGroups/vmhead-nsg"
          },
          "dependencies": [
            "azurerm_network_interface.vmcompute969_z1",
            "azurerm_network_security_group.VMhead_nsg",
            "azurerm_subnet.vm_subnet",
            "azurerm_virtual_network.Poc_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "VMhead_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/58048bb8-7fbe-431d-b28e-d5bca207fbdf/resourceGroups/EnvironTest/providers/Microsoft.Network/networkSecurityGroups/vmhead-nsg",
            "location": "canadacentral",
            "name": "vmhead-nsg",
            "resource_group_name": "EnvironTest",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3389",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow-RDP",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "",
                "source_address_prefixes": [
                  "184.162.17.138"
                ],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "10.10.1.4",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "1433",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "AllowOutboundSQLToSQLServer",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "sql_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/58048bb8-7fbe-431d-b28e-d5bca207fbdf/resourceGroups/EnvironTest/providers/Microsoft.Network/networkSecurityGroups/sql-nsg",
            "location": "canadacentral",
            "name": "sql-nsg",
            "resource_group_name": "EnvironTest",
            "security_rule": [],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "allow_rdp",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "3389",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/58048bb8-7fbe-431d-b28e-d5bca207fbdf/resourceGroups/EnvironTest/providers/Microsoft.Network/networkSecurityGroups/vmhead-nsg/securityRules/Allow-RDP",
            "name": "Allow-RDP",
            "network_security_group_name": "vmhead-nsg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "EnvironTest",
            "source_address_prefix": "",
            "source_address_prefixes": [
              "184.162.17.138"
            ],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.VMhead_nsg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "allow_sql_out",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "10.10.1.4",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "1433",
            "destination_port_ranges": [],
            "direction": "Outbound",
            "id": "/subscriptions/58048bb8-7fbe-431d-b28e-d5bca207fbdf/resourceGroups/EnvironTest/providers/Microsoft.Network/networkSecurityGroups/vmhead-nsg/securityRules/AllowOutboundSQLToSQLServer",
            "name": "AllowOutboundSQLToSQLServer",
            "network_security_group_name": "vmhead-nsg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "EnvironTest",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_mssql_server.sql_server",
            "azurerm_network_security_group.VMhead_nsg",
            "azurerm_private_endpoint.sql_pe",
            "azurerm_subnet.subnet_sql",
            "azurerm_virtual_network.vnet",
            "data.azurerm_key_vault.main",
            "data.azurerm_key_vault_secret.sql_password"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "vm_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/58048bb8-7fbe-431d-b28e-d5bca207fbdf/resourceGroups/EnvironTest/providers/Microsoft.Network/publicIPAddresses/public-ip-vm",
            "idle_timeout_in_minutes": 4,
            "ip_address": "4.205.130.237",
            "ip_version": "IPv4",
            "location": "canadacentral",
            "name": "public-ip-vm",
            "resource_group_name": "EnvironTest",
            "sku": "Standard",
            "sku_tier": "Regional"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet_sql",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.10.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/58048bb8-7fbe-431d-b28e-d5bca207fbdf/resourceGroups/EnvironTest/providers/Microsoft.Network/virtualNetworks/vnet-sql/subnets/subnet-sql",
            "name": "subnet-sql",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "EnvironTest",
            "virtual_network_name": "vnet-sql"
          },
          "dependencies": [
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "vm_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/58048bb8-7fbe-431d-b28e-d5bca207fbdf/resourceGroups/EnvironTest/providers/Microsoft.Network/virtualNetworks/vnet-poc/subnets/subnet-vm",
            "name": "subnet-vm",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "EnvironTest",
            "virtual_network_name": "vnet-poc"
          },
          "dependencies": [
            "azurerm_virtual_network.Poc_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "sql_nsg_link",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/58048bb8-7fbe-431d-b28e-d5bca207fbdf/resourceGroups/EnvironTest/providers/Microsoft.Network/virtualNetworks/vnet-sql/subnets/subnet-sql",
            "network_security_group_id": "/subscriptions/58048bb8-7fbe-431d-b28e-d5bca207fbdf/resourceGroups/EnvironTest/providers/Microsoft.Network/networkSecurityGroups/sql-nsg",
            "subnet_id": "/subscriptions/58048bb8-7fbe-431d-b28e-d5bca207fbdf/resourceGroups/EnvironTest/providers/Microsoft.Network/virtualNetworks/vnet-sql/subnets/subnet-sql"
          },
          "dependencies": [
            "azurerm_network_security_group.sql_nsg",
            "azurerm_subnet.subnet_sql",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "Poc_vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "5c7ad6c1-cac6-42fb-bb4d-0e6647807a1e",
            "id": "/subscriptions/58048bb8-7fbe-431d-b28e-d5bca207fbdf/resourceGroups/EnvironTest/providers/Microsoft.Network/virtualNetworks/vnet-poc",
            "location": "canadacentral",
            "name": "vnet-poc",
            "private_endpoint_vnet_policies": "Disabled",
            "resource_group_name": "EnvironTest",
            "subnet": [
              {
                "address_prefixes": [
                  "10.0.1.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/58048bb8-7fbe-431d-b28e-d5bca207fbdf/resourceGroups/EnvironTest/providers/Microsoft.Network/virtualNetworks/vnet-poc/subnets/subnet-vm",
                "name": "subnet-vm",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true
              }
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.10.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "dea45a64-72fa-4dea-8f8d-5bc696fd0a48",
            "id": "/subscriptions/58048bb8-7fbe-431d-b28e-d5bca207fbdf/resourceGroups/EnvironTest/providers/Microsoft.Network/virtualNetworks/vnet-sql",
            "location": "canadacentral",
            "name": "vnet-sql",
            "private_endpoint_vnet_policies": "Disabled",
            "resource_group_name": "EnvironTest",
            "subnet": [
              {
                "address_prefixes": [
                  "10.10.1.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/58048bb8-7fbe-431d-b28e-d5bca207fbdf/resourceGroups/EnvironTest/providers/Microsoft.Network/virtualNetworks/vnet-sql/subnets/subnet-sql",
                "name": "subnet-sql",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true,
                "security_group": "/subscriptions/58048bb8-7fbe-431d-b28e-d5bca207fbdf/resourceGroups/EnvironTest/providers/Microsoft.Network/networkSecurityGroups/sql-nsg"
              }
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "poc_to_sql",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": true,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/58048bb8-7fbe-431d-b28e-d5bca207fbdf/resourceGroups/EnvironTest/providers/Microsoft.Network/virtualNetworks/vnet-poc/virtualNetworkPeerings/poc-to-sql",
            "name": "poc-to-sql",
            "only_ipv6_peering_enabled": false,
            "peer_complete_virtual_networks_enabled": true,
            "remote_virtual_network_id": "/subscriptions/58048bb8-7fbe-431d-b28e-d5bca207fbdf/resourceGroups/EnvironTest/providers/Microsoft.Network/virtualNetworks/vnet-sql",
            "resource_group_name": "EnvironTest",
            "use_remote_gateways": false,
            "virtual_network_name": "vnet-poc"
          },
          "dependencies": [
            "azurerm_virtual_network.Poc_vnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "sql_to_poc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": true,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/58048bb8-7fbe-431d-b28e-d5bca207fbdf/resourceGroups/EnvironTest/providers/Microsoft.Network/virtualNetworks/vnet-sql/virtualNetworkPeerings/sql-to-poc",
            "name": "sql-to-poc",
            "only_ipv6_peering_enabled": false,
            "peer_complete_virtual_networks_enabled": true,
            "remote_virtual_network_id": "/subscriptions/58048bb8-7fbe-431d-b28e-d5bca207fbdf/resourceGroups/EnvironTest/providers/Microsoft.Network/virtualNetworks/vnet-poc",
            "resource_group_name": "EnvironTest",
            "use_remote_gateways": false,
            "virtual_network_name": "vnet-sql"
          },
          "dependencies": [
            "azurerm_virtual_network.Poc_vnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    }
  ]
}